Allow students to view learning materials for their class
